# kontur

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTION.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRD-coop-supervisor.md  README.md  UX-kontur.md  testout.txt
.github/: CODEOWNERS
.github/workflows/: release.yml
crates/kontur-core/: Cargo.toml
crates/kontur-core/src/: canonical.rs  eligibility.rs  error.rs  hold.rs  ids.rs  lib.rs  policy.rs  sealed.rs  verdict.rs
crates/kontur-core/src/audit/: chain.rs  mod.rs  record.rs
crates/kontur-mcp/: Cargo.toml
crates/kontur-mcp/src/: error.rs  fleet_workspace.rs  fs_workspace.rs  gatehost.rs  git_workspace.rs  lib.rs  provenance.rs  server.rs  session.rs  workspace.rs
crates/kontur-mcp/tests/: fleet_isolation.rs  server_mcp.rs
crates/kontur-net/: Cargo.toml
crates/kontur-net/src/: agent.rs  agent_endpoint.rs  clarify.rs  client.rs  codec.rs  difftext.rs  lib.rs  protocol.rs  server.rs  tls.rs
crates/kontur-net/tests/: e2e.rs  real_agent.rs
crates/kontur-tui/: Cargo.toml
crates/kontur-tui/src/: app.rs  boot.rs  claude_agent.rs  compose.rs  demo.rs  diffview.rs  fleet.rs  input.rs  lib.rs  link.rs  planedit.rs  remote.rs  render.rs  update.rs  view.rs  viewmodel.rs
crates/kontur-tui/tests/: flow.rs  mcp_bridge.rs  render.rs
docs/: PRD-coop-supervisor.md  UX-kontur.md
docs/superpowers/plans/: 2026-07-16-kontur-core-engine.md  2026-07-23-homebrew-distribution-and-version-awareness.md
docs/superpowers/specs/: 2026-07-17-kontur-mcp-enforcement-plane-design.md  2026-07-17-kontur-tui-console-design.md  2026-07-18-kontur-completion-design.md  2026-07-20-tier1-real-agent-design.md  2026-07-23-homebrew-distribution-and-version-awareness-design.md
