[package]
name = "kontur-core"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
thiserror = "2"

[dev-dependencies]
proptest = "1"
serde_json = "1"
