[package]
name = "kontur-mcp"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
kontur-core = { path = "../kontur-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
rmcp = { version = "2.2", features = ["server", "client", "macros", "schemars", "transport-async-rw"] }
serde_json = "1"
