[package]
name = "kontur-net"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kontur-core = { path = "../kontur-core" }
kontur-mcp = { path = "../kontur-mcp" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-big-array = "0.5"
thiserror = "2"
rmcp = { version = "2.2", features = ["server", "transport-async-rw"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
sha2 = "0.10"
rustls-pki-types = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
