[package]
name = "kontur-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
kontur-core = { path = "../kontur-core" }
kontur-mcp = { path = "../kontur-mcp" }
kontur-net = { path = "../kontur-net" }
ratatui = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal", "process"] }
getrandom = "0.2"

[dev-dependencies]

[[bin]]
name = "kontur"
path = "src/bin/kontur.rs"
