[package]
name = "kontur-tui"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Brutalist CLI for two-signatory agentic pair programming"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
semver = "1"
kontur-core = { path = "../kontur-core" }
kontur-mcp = { path = "../kontur-mcp" }
kontur-net = { path = "../kontur-net" }
ratatui = "0.30"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "signal",
    "process",
    "io-std",
    "io-util",
] }
getrandom = "0.2"
ureq = "2"

[dev-dependencies]

[[bin]]
name = "kontur"
path = "src/bin/kontur.rs"
